# prt

./: AUTHORS  COPYING  ChangeLog  Dockerfile  Makefile.am  NEWS  README  configure.ac
examples/: Makefile.am
examples/cpp-basic/: main.cpp
prt/: Makefile.am
prt/engine/: mesh.c  mesh.h  particles.c  particles.h  render.c  render.h
prt/graphics/: common.c  common.h  framebuffer.c  framebuffer.h  renderbuffer.c  renderbuffer.h  rendering.c  rendering.h  shader.c  shader.h  stb_image.h  texture.c  texture.h
prt/runtime/: lock.c  lock.h  resource_manager.c  resource_manager.h  resources.c  resources.h
prt/shared/: array.c  array.h  avl_tree.c  avl_tree.h  basic.c  basic.h  bit_vector.c  bit_vector.h  fast_hash.c  fast_hash.h  hashtable.c  hashtable.h  json.c  json.h  kd_tree.c  kd_tree.h  math.h  pool.c  pool.h  popcnt.c  popcnt.h  refcounted.h  sparse_hash.c  sparse_hash.h
res/effects/: particle.json  solid-color.json  solid-texture.json
res/shaders/: generic-vertex.shd  particle-fragment.shd  particle-vertex.shd  solidcolor-fragment.shd  texture-fragment.shd
src/: Makefile.am
src/engine/: mesh.c  mesh.h  particles.c  particles.h  render.c  render.h
src/graphics/: common.c  common.h  framebuffer.c  framebuffer.h  renderbuffer.c  renderbuffer.h  rendering.c  rendering.h  shader.c  shader.h  texture.c  texture.h
src/runtime/: lock.c  lock.h  resource_manager.c  resource_manager.h  resources.c  resources.h
src/shared/: array.c  array.h  avl_tree.c  avl_tree.h  basic.c  bit_vector.c  bit_vector.h  fast_hash.c  fast_hash.h  hashtable.c  hashtable.h  json.c  kd_tree.c  kd_tree.h  list.h  pool.c  pool.h  popcnt.c  popcnt.h  refcounted.h  sparse_hash.c  sparse_hash.h
tests/: Makefile.am  avl_tree.c  bit_vector.c  common.h  fast_hash.c  hashtable.c  kd_tree.c  popcnt.c  sparse_hash.c
tools/: clang-format-all
