AM_CFLAGS = -I../
AM_LDFLAGS = ../prt/libprt.la

avl_tree_BIN = avl_tree
avl_tree_SOURCES = avl_tree.c

bit_vector_BIN = bit_vector
bit_vector_SOURCES = bit_vector.c

fast_hash_BIN = fast_hash
fast_hash_SOURCES = fast_hash.c

hashtable_BIN = hashtable
hashtable_SOURCES = hashtable.c

kd_tree_BIN = kd_tree
kd_tree_SOURCES = kd_tree.c

popcnt_BIN = popcnt
popcnt_SOURCES = popcnt.c

sparse_hash_BIN = sparse_hash
sparse_hash_SOURCES = sparse_hash.c

noinst_PROGRAMS = avl_tree bit_vector fast_hash hashtable kd_tree popcnt sparse_hash
